<resources>
    <string name="app_name">Pratice3</string>
    <string name="Register"><u>Register Here</u></string>
    <string name="email">Email</string>
    <string name="type_your_email_address">Type Your Email Address</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="todo">TODO</string>
    <string name="ch_n_d_ch_v">Chọn Dịch Vụ</string>
    <string name="tho_t">Thoát</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="gi_t_i">Giặt ủi</string>
    <string name="kh_ch_s_n">Khách sạn</string>
    <string name="th_c_n_nhanh">Thức ăn nhanh</string>
    <string name="taxi">Taxi</string>
    <string name="v_n_chuy_n">Vận Chuyển</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="ha_long_bay">Ha Long Bay</string>
    <string name="settings">Settings</string>
    <string name="leica_m_typ_240">Leica M Typ 240</string>
    <string name="f_4_16s_iso_200">f/4 16s ISO 200</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="camera">Camera</string>
</resources>