<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="138dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/images"
        />
</RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
      />

    <EditText
        android:id="@+id/editUser"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_your_email_address"
        android:inputType="textPersonName"
        android:rotationX="4"
        android:textColorHint="#555454"
    />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#F6F3F3"
        android:textSize="22sp"
       />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/type_your_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/login"
        android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
    <TextView
        android:id="@+id/txtNameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
 />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="136dp"
        android:layout_height="35dp"
        android:text="@string/Register"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        />
    </LinearLayout>
</LinearLayout>
</ScrollView>