<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:background="#0B403A">

                <TextView
                    android:layout_width="265dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/ch_n_d_ch_v"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <Button
                    android:layout_width="136dp"
                    android:layout_height="70sp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:backgroundTint="#737373"
                    android:gravity="center"
                    android:text="@string/tho_t"
                    android:textSize="20sp" />
            </TableRow>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo1"
                        app:srcCompat="@drawable/maygiat" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gi_t_i"
                        android:textColor="#FDFCFC"
                        android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="149dp"
                        android:layout_height="124dp"
                        app:srcCompat="@drawable/hotel"
                        android:contentDescription="@string/todo2" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kh_ch_s_n"
                        android:textColor="#F8F3F3"
                        android:textSize="18sp" />
                </LinearLayout>
            </TableRow>
            <TableRow>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imagetaxi"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo4"
                        app:srcCompat="@drawable/taxi"/>
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taxi"
                        android:textColor="#FFF5F5"
                        android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo4"
                        app:srcCompat="@drawable/thucan"
                        tools:ignore="ImageContrastCheck" />
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/th_c_n_nhanh"
                        android:textColor="#F8F2F2"
                        android:textSize="18sp" />

                </LinearLayout>
            </TableRow>
            <TableRow
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo3"
                        app:srcCompat="@drawable/xetai" />
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/v_n_chuy_n"
                        android:textColor="#FBF7F7"
                        android:textSize="18sp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>